Update spells
