# src/resources/spells/dtos/update-spell.dto.ts
@@ -1,11 +1,9 @@
-import { PartialType } from "@nestjs/mapped-types";
-import { CreateSpellDto } from "@/resources/spells/dtos/create-spell.dto";
-import { IsNumber } from "class-validator";
+import { IsIn, IsNumber } from "class-validator";
 import { ApiProperty } from "@nestjs/swagger";
 
-export class UpdateSpellDto extends PartialType(CreateSpellDto) {
+export class UpdateSpellDto {
 
-    @ApiProperty({ example: 1, description: "0: Homebrew, 1: Certified by Chariot", maximum: 1, minimum: 0 })
-    @IsNumber({ maxDecimalPlaces: 0 })
+    @ApiProperty({ example: 1, description: "0: Homebrew, 1: Certified by Chariot", enum: [0, 1] })
+    @IsIn([0, 1])
     tag: 0 | 1;
 }
